# pm-bench

./: .dockerignore  .gitignore  BENCHMARK_VERSION.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  HOW_TO_RUN.md  HUMAN_BASELINE.md  LEADERBOARD.md  LICENSE  METHODOLOGY.md  NEXT_STEPS.md  PAPER.md  README.md  SUBMISSIONS.md  demo.py  docker-compose.yml  pyproject.toml  pytest.ini  run.py  run_baselines.sh
.github/workflows/: ci.yml
docs/: CONSTRUCT_VALIDITY.md
examples/: sample_result.json
fixtures/: cross-channel-log.md  decisions-with-reasoning.md  identity.md  intents.md  rich-project-state.md
fixtures/stories/: 01-silent-collision-log.md  02-scheduling-context.md  03-unasked-question-log.md  04-misread-metric.md  05-cloud-costs.md  06-support-tickets.md  07-meeting-context.md  08-onboarding-context.md  09-scope-surgery.md  10-green-ci-paradox.md  11-stale-thread.md  12-heated-thread.md  13-launch-plan.md  14-timezone-context.md  15-tech-debt-log.md  16-competitor-context.md  17-refactor-justification.md  18-reverse-escalation.md  19-casual-decision-log.md  20-failed-launch.md  21-rate-limit-context.md
huggingface/: README.md  loading_script.py  mcq.jsonl  open-ended.jsonl  prepare_hf_dataset.py
human_baselines/: TEMPLATE.md
scenarios/: open-ended.json  scenarios.json
scenarios/context-assembly/: 01-intent-impact.jsonc  02-audience-framing.jsonc  03-retrieval-bias.jsonc  04-triage.jsonc  05-intent-lifecycle.jsonc
submissions/delegate-agent/: delegate_full_eval_history.json
submissions/openai-baselines/2026-04-14/: 20260414-152730_mcq_openai_gpt-4.1-nano.json  20260414-152815_mcq_openai_gpt-4.1-mini.json  20260414-153010_mcq_openai_gpt-5-nano.json  20260414-153210_mcq_openai_gpt-5.4-nano.json  20260414-153247_mcq_openai_gpt-5.4-mini.json  20260414-153518_mcq_openai_gpt-5-mini.json  (+92 more)
tests/: conftest.py  test_fixtures.py  test_mock.py  test_schema.py  test_scoring.py
tools/: analyze.py  compare_results.py  contamination.py  hf_push.py  integrity_check.py  multi_run.py  report.py  update_leaderboard.py  validate_answers.py  validate_schema.py  workspace_variants.py
workspace/: HEARTBEAT.md  IDENTITY.md  INTENTS.md  MEMORY.md
workspace/logs/: 2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-24.md  2026-02-25.md
workspace/memory/: billing-migration.md  decisions.md  people.md  q2-planning.md
