[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-bench"
version = "1.0.0"
description = "A benchmark for AI PM judgment in a noisy engineering workspace"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Alan Kern"},
    {name = "Josh Reed"},
]
keywords = ["benchmark", "llm", "evaluation", "product-management", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core has no required deps — only needed for the runner / analysis.
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.34.0"]
openai = ["openai>=1.40.0"]
analysis = ["pandas>=2.0", "scipy>=1.11", "numpy>=1.24"]
all = [
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "pandas>=2.0",
    "scipy>=1.11",
    "numpy>=1.24",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
pm-bench = "run:main"

[project.urls]
Homepage = "https://github.com/KernAlan/pm-bench"
Repository = "https://github.com/KernAlan/pm-bench"
Issues = "https://github.com/KernAlan/pm-bench/issues"

# -----------------------------------------------------------------------------
# Packaging layout
# -----------------------------------------------------------------------------
# PM-Bench ships the runner + demo as top-level modules, plus the scenarios,
# fixtures, and a minimal workspace snapshot as package data. The `tools/`
# directory is intentionally not auto-installed as an import package so that
# contributors can run `python tools/<script>.py` from a checkout without
# namespace collisions.
[tool.setuptools]
py-modules = ["run", "demo"]

[tool.setuptools.package-data]
"*" = [
    "scenarios/*.json",
    "scenarios/*.jsonc",
    "scenarios/context-assembly/*.jsonc",
    "fixtures/**/*.md",
    "workspace/**/*.md",
    "tools/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning"]
